# swiss-qr-bill-decoder

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  renovate.json
.github/workflows/: lint.yml  release.yml  rust.yml  test.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: six_examples.rs
lib/: Cargo.toml
lib/src/: lib.rs  pdf_converter.rs  qr_parser.rs
lib/src/models/: address.rs  qr_data.rs
lib/tests/: edge_cases.rs  six_examples.rs
src/: args.rs  lib.rs  main.rs  pdf_converter.rs  qr_parser.rs
src/models/: address.rs  args.rs  mod.rs  qr_data.rs
tests/: edge_cases.rs  six_examples.rs
