[package]
name = "post-qr-decoder"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"

[dependencies]
rqrr = "0.7.1"
image = "0.25.1"
clap = { version = "4.5.7", features = ["derive"] }
tempfile = "3.10.1"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }
