[package]
name = "swiss-qr-bill-decoder"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Mike Schmid <mike@smartive.ch>"]
description = "A simple tool to decode GR codes of swiss invoices"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[dependencies]
rqrr = "0.7.1"
image = "0.25.1"
clap = { version = "4.5.7", features = ["derive"] }
tempfile = "3.10.1"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
indoc = "2.0.5"
assert-json-diff = "2.0.2"
