[package]
name = "swiss-qr-bill-decoder"
version = "1.2.15"
edition = "2021"
publish = false
authors = ["Mike Schmid <mike@smartive.ch>"]
description = "A simple tool to decode QR codes of Swiss QR bills"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde_json = "1.0.117"
rqrr = "0.8.0"
image = "0.25.1"
tempfile = "3.10.1"
serde = { version = "1.0.203", features = ["derive"] }
rayon = "1.10.0"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
indoc = "2.0.5"
assert-json-diff = "2.0.2"
