[package]
name = "swiss-qr-bill-decoder"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Mike Schmid <mike@smartive.ch>"]
description = "A simple tool to decode GR codes of swiss qr bills"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde_json = "1.0.117"
swiss-qr-bill-decoder-lib = { path = "../lib" }

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
indoc = "2.0.5"
assert-json-diff = "2.0.2"
