[package]
name = "swiss-qr-bill-decoder-lib"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Mike Schmid <mike@smartive.ch>"]
description = "A simple tool to decode GR codes of swiss qr bills"

[lints.rust]
unsafe_code = "forbid"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
panic = "abort"

[dependencies]
rqrr = "0.7.1"
image = "0.25.1"
tempfile = "3.10.1"
serde_json = "1.0.117"
serde = { version = "1.0.203", features = ["derive"] }

[dev-dependencies]
indoc = "2.0.5"